get it working without menu and with overlap issues

--- a/css/yt1300.topbar.css
+++ b/css/yt1300.topbar.css
@@ -1,12 +1,14 @@
-#top-big { display: block; }
+#big-top { display: block; }
 
-#masthead { width: 100%; height: 100px; background-color: #666; position: fixed; top: 0; left: 0; }
+#masthead { width: 100%; height: 100px; position: fixed; top: 0; left: 0; }
 
-#header-main { width: 25%; float: left; display: inline; }
+.header-main { width: 25%; float: left; display: inline; }
 
-#top-bar-widgets { width: 75%; display: inline; }
+#top-bar-widgets { width: 75%; display: inline; color: white; }
 #top-bar-widgets p { float: right; }
 
-nav#primary-navigation { width: 100%; display: block; top: 40px; left: 0px; position: absolute; /*
+nav#primary-navigation { width: 100%; display: block; top: 40px; left: 0px; position: absolute; background: transparent; padding-left: 30px; /*
 ul { li { display:inline; padding: 0px 15px 0 15px; } li:first-child { padding-left: 0px; }
 }*/ }
+
+.topbar-menu { display: inline; }
