--- a/inc/topbar.scss
+++ b/inc/topbar.scss
@@ -1,18 +1,17 @@
-#top-big{
+#big-top{
   display:block;
 }
 
 #masthead {
   width:100%;
   height:100px;
-  background-color:#666;
   position:fixed;
   top:0;
   left:0;
 }
 
 
-#header-main {
+.header-main {
   width: 25%;
   float: left;
   display: inline;
@@ -20,6 +19,7 @@
 #top-bar-widgets {
   width: 75%;
   display:inline;
+  color: white;
   p {
     float:right;
   }
@@ -30,6 +30,8 @@ nav#primary-navigation  {
   top: 40px;
   left: 0px;
   position: absolute;
+  background: transparent;
+  padding-left:30px;
   /*
   ul {
     li {
@@ -40,4 +42,8 @@ nav#primary-navigation  {
       padding-left: 0px;
     }
   }*/
+}
+
+.topbar-menu {
+  display:inline;
 }
